--- a/improve.ipynb
+++ b/improve.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DF = pd.read_csv(r'/Users/sanjaymandal/Downloads/count_10mer_37genome.csv', encoding= 'unicode_escape', index_col=0)"
+    "DF = pd.read_csv(r'/Users/.........ome.csv', encoding= 'unicode_escape', index_col=0)"
    ]
   },
   {
