--- a/improve.ipynb
+++ b/improve.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,11 +22,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DF = pd.read_csv(r'/Users/.........ome.csv', encoding= 'unicode_escape', index_col=0)"
+    "DF = pd.read_csv(r'/Users/sanjaymandal/Downloads/count_10mer_37genome.csv', encoding= 'unicode_escape', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(37, 517262)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DF.shape"
    ]
   },
   {
